[package]
name = "mcp-deck"
version = "0.1.0"
description = "A desktop MCP configuration manager"
authors = ["mcp-deck"]
edition = "2021"

[lib]
name = "mcp_deck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "1"
toml_edit = { version = "0.22", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
